--- a/cmd.properties
+++ b/cmd.properties
@@ -1,5 +1,8 @@
 #Thu Apr 23 20:22:57 CEST 2015
 
+winscp = C:\\projects\\WinSCP\\
+ftp = ftp://rdkund:raindance@ftp1.wm.net
+users = kalle
 # all commands
 # ============
 cmd = p,w,r
@@ -19,8 +22,16 @@ sys = t,r,v,p
 # copy war config
 # ===============
 #
-#The folder on your drive
-#w.t = c:/war/trunk
+#The folder on the ftp, the folder on the system no spaces.
+w.t.ftpdir = Karlk
+w.t.ftpfile = props
+w.t.target = c:\\projects\\
+w.t.warname = phantomjs.exe
+w.t.tomee = localhost
+w.t.port = port
+w.t.shutdown = localhost
+w.t.service = TomEE
+
 #w.r = c:/war/released
 #w.v = c:/war/verification
 #w.p = c:/war/production
