--- a/pom.xml
+++ b/pom.xml
@@ -231,6 +231,13 @@
 			<version>1.48</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-httpclient</groupId>
+			<artifactId>commons-httpclient</artifactId>
+			<version>3.1</version>
+		</dependency>
+
+
 	</dependencies>
 
 
